--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "id": "multi-aggregator",
   "name": "Multi Aggregator (Real-Debrid Optimized)",
   "version": "1.0.0",
-  "manifestURI": "https://raw.githubusercontent.com/<you>/<repo>/main/manifest.json",
+  "manifestURI": "https://raw.githubusercontent.com/Vv4j/multi-provider/main/manifest.json",
   "language": "typescript",
   "type": "anime-torrent-provider",
   "description": "Aggregates multiple quality torrent providers (optimized for Real-Debrid). Priority: SeaDex > AnimeTosho > AniLiberty > Nyaa > ACG.RIP > RuTracker. Prioritizes InfoHash/Magnet links, clean metadata, and deduplication.",
-  "author": "<you>",
-  "icon": "https://raw.githubusercontent.com/<you>/<repo>/main/icon.png",
+  "author": "Vv4j",
+  "icon": "https://raw.githubusercontent.com/Vv4j/multi-provider/main/icon.png",
   "lang": "multi",
-  "payloadURI": "https://raw.githubusercontent.com/<you>/<repo>/main/provider.ts",
+  "payloadURI": "https://raw.githubusercontent.com/Vv4j/multi-provider/main/provider.ts",
   "isDevelopment": false,
   "userConfig": {
     "requiresConfig": false,
